// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserInvitationSSOPage /> <TestUserInvitationSSOPage /> should render facebook sso button 1`] = `
<div
  className="sc-bdnxRM Flex___StyledAppBox-RSPpX hsmwud UserInvitationSSOPagestyle__Container-dqcskM gfEZSl"
>
  <div
    className="sc-bdnxRM Flex___StyledAppBox-RSPpX kDOTRG UserInvitationSSOPagestyle__LeftSide-hxTIJT jXeXli"
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX kkRZix UserInvitationSSOPagestyle__LeftSideInner-jdiSwF kBWVTx"
    >
      <div
        className="sc-bdnxRM UserInvitationSSOPagestyle__WelcomeMessage-hsrIYq flMSnR eyOJtW"
      >
        <h2
          className="sc-bdnxRM hdEyrP"
        >
          global-welcome
           
          <span
            aria-label="global-welcome"
            role="img"
          >
            👋
          </span>
        </h2>
        <p
          className="sc-bdnxRM cbhbJF"
        >
          invite-join-platform
        </p>
      </div>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX fitFXx UserInvitationSSOPagestyle__ButtonsContainer-ekelIt knVuOM"
      >
        <div
          className="SSOButtonstyle__LinkButton-inldgY dvVgld"
          type="facebook"
        >
          <span
            className="loginIcon"
            style={
              Object {
                "lineHeight": "inherit",
              }
            }
          >
            <IconMock
              aria-hidden={true}
              className="icon"
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
            />
          </span>
          <a
            href="/login/facebook?_destination=http://localhost"
            rel="noreferrer"
            target="_blank"
            title="facebook"
          >
            <span>
              Facebook
            </span>
          </a>
        </div>
        <div
          className="sc-bdnxRM Flex___StyledAppBox-RSPpX eEoMPv"
        >
          <div
            className="sc-bdnxRM UserInvitationSSOPagestyle__Line-eDQTMF fSxcQx eKkebp"
          />
          <p
            className="sc-bdnxRM eaTeCp"
          >
            global-or
          </p>
          <div
            className="sc-bdnxRM UserInvitationSSOPagestyle__Line-eDQTMF fSxcQx eKkebp"
          />
        </div>
        <a
          backgroundColor="green"
          className="SSOButtonstyle__BaseButton-dfBTRJ SSOButtonstyle__PrimarySSOButton-fjCAej bEDTed hTYcqt"
          href="/?token=onishan"
          onClick={[Function]}
          textColor="white"
        >
          create-account-with-email
        </a>
      </div>
    </div>
  </div>
  <div
    className="sc-bdnxRM Flex___StyledAppBox-RSPpX egROXr UserInvitationSSOPagestyle__RigthSide-icSZSY ggEWDE"
  >
    <div
      className="UserInvitationPagestyle__Symbols-eeCpyJ doHYBq"
    />
    <img
      alt=""
      className="UserInvitationSSOPagestyle__Logo-ismXzE hJrHso"
      src="/logo"
    />
  </div>
</div>
`;

exports[`<UserInvitationSSOPage /> <TestUserInvitationSSOPage /> should render franceConnect sso button 1`] = `
<div
  className="sc-bdnxRM Flex___StyledAppBox-RSPpX hsmwud UserInvitationSSOPagestyle__Container-dqcskM gfEZSl"
>
  <div
    className="sc-bdnxRM Flex___StyledAppBox-RSPpX kDOTRG UserInvitationSSOPagestyle__LeftSide-hxTIJT jXeXli"
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX kkRZix UserInvitationSSOPagestyle__LeftSideInner-jdiSwF kBWVTx"
    >
      <div
        className="sc-bdnxRM UserInvitationSSOPagestyle__WelcomeMessage-hsrIYq flMSnR eyOJtW"
      >
        <h2
          className="sc-bdnxRM hdEyrP"
        >
          global-welcome
           
          <span
            aria-label="global-welcome"
            role="img"
          >
            👋
          </span>
        </h2>
        <p
          className="sc-bdnxRM cbhbJF"
        >
          invite-join-platform
        </p>
      </div>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX fitFXx UserInvitationSSOPagestyle__ButtonsContainer-ekelIt knVuOM"
      >
        <div
          className="SSOButtonstyle__FranceConnectButton-iJkBJn jDFPkc"
        >
          <a
            className="sc-bdnxRM Link__LinkInner-jUwnjy kZFksl jnxQhY"
            href="/login/franceconnect?_destination=http://localhost"
            target="_blank"
          >
            <span
              className="loginIcon"
              style={
                Object {
                  "lineHeight": "inherit",
                }
              }
            >
              <IconMock
                aria-hidden={true}
                className="icon"
                style={
                  Object {
                    "flexShrink": "0",
                    "verticalAlign": "middle",
                  }
                }
              />
            </span>
          </a>
        </div>
        <div
          className="sc-bdnxRM Flex___StyledAppBox-RSPpX eEoMPv"
        >
          <div
            className="sc-bdnxRM UserInvitationSSOPagestyle__Line-eDQTMF fSxcQx eKkebp"
          />
          <p
            className="sc-bdnxRM eaTeCp"
          >
            global-or
          </p>
          <div
            className="sc-bdnxRM UserInvitationSSOPagestyle__Line-eDQTMF fSxcQx eKkebp"
          />
        </div>
        <a
          backgroundColor="green"
          className="SSOButtonstyle__BaseButton-dfBTRJ SSOButtonstyle__PrimarySSOButton-fjCAej bEDTed hTYcqt"
          href="/?token=onishan"
          onClick={[Function]}
          textColor="white"
        >
          create-account-with-email
        </a>
      </div>
    </div>
  </div>
  <div
    className="sc-bdnxRM Flex___StyledAppBox-RSPpX egROXr UserInvitationSSOPagestyle__RigthSide-icSZSY ggEWDE"
  >
    <div
      className="UserInvitationPagestyle__Symbols-eeCpyJ doHYBq"
    />
    <img
      alt=""
      className="UserInvitationSSOPagestyle__Logo-ismXzE hJrHso"
      src="/logo"
    />
  </div>
</div>
`;
